# code-metrics-platform

./: .gitignore  README.md  docker-compose.yml  main.py  ppt_content.txt  pyproject.toml
airflow/dags/: code_metrics_dag.py
dashboard/: app.py
docs/: 01-getting-started.md  02-system-architecture.md  03-data-model-and-schema.md  04-distributed-and-ha-design.md  05-streaming-pipeline-walkthrough.md  06-batch-pipeline-walkthrough.md  07-dashboard-and-serving-layer.md  08-airflow-orchestration.md  09-operations-runbook.md  10-troubleshooting-knowledge-base.md  11-academic-report.md  12-slide-ready-outline.md  13-bao-cao-hoc-thuat-tieng-viet.md  14-objective-mapping-matrix.md  15-final-submission-checklist.md  16-mac-setup-guide.md  README.md
processing/: stream_leaderboard.py
scripts/: run_batch.sh  verify_cluster.sh
simulator/: generate_logs.py
src/code_metrics/: cli.py
src/code_metrics/dashboard/: app.py
src/code_metrics/processing/: batch_etl.py  stream_leaderboard.py
src/code_metrics/simulator/: generate_logs.py
src/code_metrics/storage/: init_mongo.py
src/distutils/: __init__.py  version.py
storage/: init_cassandra.cql
